--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ section p{
     justify-content: center;
     align-items: center;
     /*transform: translateX(-8%);*/
+    border: 10px dashed pink;
 }
 
 .star{
@@ -178,8 +179,8 @@ section p{
     to{transform: rotate(180deg) translateX(240px) rotate(-360deg)}
 }
 @keyframes orbit-3{
-    from{transform: rotate(270deg) translateX(300px) rotate(0deg)}
-    to{transform: rotate(630deg) translateX(300px) rotate(-360deg)}
+    from{transform: rotate(270deg) translateX(290px) rotate(0deg)}
+    to{transform: rotate(630deg) translateX(290px) rotate(-360deg)}
 }
 
 /* About Us Section */
