--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ section p{
     justify-content: center;
     align-items: center;
     /*transform: translateX(-8%);*/
+    transform: translateY(-8%);
 }
 
 .star{
