--- a/style.css
+++ b/style.css
@@ -158,8 +158,10 @@ section p{
 }
 
 .orbit{
-    width: 30px;
-    height: 30px;
+    /*width: 30px;
+    height: 30px;*/
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background: linear-gradient(225deg, #f12711, #f5af19);
     z-index: 2;
@@ -168,19 +170,19 @@ section p{
 /* Logo Animations */
 .orbit-1{animation: orbit-1 15s linear infinite;}
 .orbit-2{animation: orbit-2 20s linear infinite;}
-.orbit-3{animation: orbit-3 25s linear infinite;}
+/*.orbit-3{animation: orbit-3 25s linear infinite;}*/
 @keyframes orbit-1{
     from{transform: rotate(0deg) translateX(160px) rotate(0deg)}
     to{transform: rotate(360deg) translateX(160px) rotate(-360deg)}
 }
 @keyframes orbit-2{
-    from{transform: rotate(540deg) translateX(230px) rotate(0deg)}
-    to{transform: rotate(180deg) translateX(230px) rotate(-360deg)}
+    from{transform: rotate(540deg) translateX(250px) rotate(0deg)}
+    to{transform: rotate(180deg) translateX(250px) rotate(-360deg)}
 }
-@keyframes orbit-3{
+/*@keyframes orbit-3{
     from{transform: rotate(270deg) translateX(285px) rotate(0deg)}
     to{transform: rotate(630deg) translateX(285px) rotate(-360deg)}
-}
+}*/
 
 /* About Us Section */
 #about, #game{
