--- a/style.css
+++ b/style.css
@@ -170,16 +170,16 @@ section p{
 .orbit-2{animation: orbit-2 20s linear infinite;}
 .orbit-3{animation: orbit-3 25s linear infinite;}
 @keyframes orbit-1{
-    from{transform: rotate(0deg) translateX(160px) rotate(0deg)}
-    to{transform: rotate(360deg) translateX(160px) rotate(-360deg)}
+    from{transform: rotate(0deg) translateX(160px) /*rotate(0deg)*/}
+    to{transform: rotate(360deg) translateX(160px) /*rotate(-360deg)*/}
 }
 @keyframes orbit-2{
-    from{transform: rotate(540deg) translateX(230px) rotate(0deg)}
-    to{transform: rotate(180deg) translateX(230px) rotate(-360deg)}
+    from{transform: rotate(540deg) translateX(230px) /*rotate(0deg)*/}
+    to{transform: rotate(180deg) translateX(230px) /*rotate(-360deg)*/}
 }
 @keyframes orbit-3{
-    from{transform: rotate(270deg) translateX(285px) rotate(0deg)}
-    to{transform: rotate(630deg) translateX(285px) rotate(-360deg)}
+    from{transform: rotate(270deg) translateX(285px) /*rotate(0deg)*/}
+    to{transform: rotate(630deg) translateX(285px) /*rotate(-360deg)*/}
 }
 
 /* About Us Section */
