--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ section p{
     display: flex;
     justify-content: center;
     align-items: center;
+    /*position: relative;*/
     /*transform: translateX(-8%);*/
 }
 
