--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ section p{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .box, .box2{
