--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ section p{
     box-shadow: -10px 15px #2c3e50;
     text-align: justify;
     padding: 30px;
+    font-size: 1.5rem;
 }
 
 .box{
